--- a/composer.json
+++ b/composer.json
@@ -5,19 +5,6 @@
     "license": "GPL-2.0-or-later",
     "homepage": "https://www.drupal.org/project/warmer",
     "repositories": {
-        "drupal/warmer": {
-            "type": "package",
-            "package": {
-                "name": "drupal/warmer",
-                "version": "2.x-dev",
-                "type": "drupal-module",
-                "source": {
-                    "url": "https://git.drupalcode.org/issue/warmer-3309450.git",
-                    "type": "git",
-                    "reference": "drupal/warmer"
-                }
-            }
-        },
         "drupal": {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
@@ -30,16 +17,17 @@
     "require": {
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.7",
-        "drupal/core-composer-scaffold": "10.1.x-dev",
-        "drupal/core-recommended": "10.1.x-dev",
-        "drupal/warmer": "2.x-dev#909aefc",
+        "drupal/core-composer-scaffold": "^9.4",
+        "drupal/core-recommended": "^9.4",
+        "drupal/queue_ui": "^3.1",
+        "drupal/warmer": "2.x-dev",
         "drush/drush": "^11.0",
         "oomphinc/composer-installers-extender": "^2.0",
         "vipnytt/sitemapparser": "^1.0",
         "wikimedia/composer-merge-plugin": "^2.0"
     },
     "require-dev": {
-        "drupal/core-dev": "10.1.x-dev",
+        "drupal/core-dev": "^9.4",
         "phpspec/prophecy-phpunit": "^2",
         "phpstan/phpstan-deprecation-rules": "^1.0"
     },
@@ -126,6 +114,9 @@
             "drupal/core": "-p2"
         },
         "patches": {
+            "drupal/warmer": {
+                "#3309435: Update to remove regressions introduced with #3309129, update tests to use claro theme":"https://git.drupalcode.org/project/warmer/-/merge_requests/9.patch"
+            }
         }
     },
     "autoload": {
