--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -65,7 +65,7 @@ jobs:
           echo ${{ env.SIMPLETEST_DB }}
           $(pwd)/vendor/bin/drush site-install standard --yes --account-pass=admin --db-url=$SIMPLETEST_DB
           $(pwd)/vendor/bin/drush en ${{env.MODULE}} --yes
-          $(pwd)/vendor/bin/drush en queue_ui warmer_entity --yes
+          $(pwd)/vendor/bin/drush en warmer_entity --yes
           $(pwd)/vendor/bin/drush config-set system.performance css.preprocess 0 --yes
           $(pwd)/vendor/bin/drush config-set system.performance js.preprocess 0 --yes
           $(pwd)/vendor/bin/drush config-set system.logging error_level all --yes
